apps/echo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
    - name: tcp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: udp
      protocol: TCP
      port: 1026
      targetPort: 1026
    - name: http
      protocol: TCP
      port: 1027
      targetPort: 1027
